--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,7 +9,7 @@ body{
 }
 
 .logo{
-    margin: 10% auto;
+    margin: 15% auto;
 }
 
 .input-label{
@@ -44,7 +44,7 @@ body{
     }
 
     &#tip-percent-input::placeholder{
-        color: $Grayish-cyan;
+        color: $Grayish-cyan;           
     }
 }
 
@@ -55,6 +55,8 @@ body{
 .calculator{
     background-color: $White;
     border-radius: 20px;
+    margin: auto;    
+    padding: 3%;
 }
 
 .btn{
@@ -80,8 +82,7 @@ body{
 
 .result{
     background-color: $Very-dark-cyan;
-    border-radius: 20px;
-    width: 95%;
+    border-radius: 20px;    
 
     & .row{
         font-size: 1rem;    
