--- a/css/styles.css
+++ b/css/styles.css
@@ -111,13 +111,13 @@
     margin-top: 22%;
   }
   #tip-percent-input::-moz-placeholder {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
   #tip-percent-input:-ms-input-placeholder {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
   #tip-percent-input::placeholder {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 body {
@@ -125,4 +125,11 @@ body {
   color: hsl(0deg, 0%, 100%);
   background-color: hsl(185deg, 41%, 84%);
   font-size: 24px;
+}
+
+.selected {
+  background-color: hsl(172deg, 67%, 45%);
+  color: hsl(183deg, 100%, 15%);
+  box-shadow: none;
+  border-color: hsl(172deg, 67%, 45%);
 }/*# sourceMappingURL=styles.css.map */
