--- a/css/styles.css
+++ b/css/styles.css
@@ -127,9 +127,22 @@ body {
   font-size: 24px;
 }
 
+label {
+  display: block;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .selected {
   background-color: hsl(172deg, 67%, 45%);
   color: hsl(183deg, 100%, 15%);
   box-shadow: none;
   border-color: hsl(172deg, 67%, 45%);
+}
+
+.invalid-value-mess {
+  color: hsl(0deg, 0%, 100%);
 }/*# sourceMappingURL=styles.css.map */
