--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,9 +10,22 @@ body{
     font-size: $font-size;
 }
 
+label{
+    display: block;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;    
+}
+
 .selected{
     background-color: $Strong-cyan;
     color: $Very-dark-cyan;
     box-shadow: none;
     border-color: $Strong-cyan;
+}
+
+.invalid-value-mess{
+    color: $White;       
 }
