--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,10 @@ label{
     display: block;
 }
 
+.attribution { font-size: 11px; text-align: center; 
+    & a { color: hsl(228, 45%, 44%); }
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;    
